- https://github.com/padreati/rapaio/issues/205 - compact binary smo classifier vectors, other refactories